<resources>
    <string name="app_name">Polmegle</string>
    <string name="topic_results">People we think you should talk too!</string>
    <string name="topic_poll">PICK A TOPIC</string>
    <string name="topic1">Abortion</string>
    <string name="topic1question1">Abortion should be prohibited in most or all cases.</string>
    <string name="topic1question2">Abortion of a fetus with Down syndrome is wrong.</string>
    <string name="topic1question3">Abortion can NOT be justified.</string>
    <string name="topic1question4">A fetus is a person.</string>
    <string name="topic1question5">Pregnant people have the right to choose to have an abortion.</string>
    <string name="topic2">Drug Legalization</string>
    <string name="topic2question1">Cannabis should be legalized.</string>
    <string name="topic2question2">Psychedelics should be legalized.</string>
    <string name="topic2question3">The war on drugs has not been worth the cost.</string>
    <string name="topic2question4">A person should have the right to do what they want.</string>
    <string name="topic2question5">Drugs always do more good than harm.</string>
    <string name="topic3">Capital Punishment</string>
    <string name="topic3question1">The death penalty is morally acceptable.</string>
    <string name="topic3question2">The death penalty is more humane than life without possibility of parole.</string>
    <string name="topic3question3">The death penalty is appropriate for a person convicted of murder.</string>
    <string name="topic3question4">The death penalty is just retribution for victims\' families.</string>
    <string name="topic3question5">The death penalty is necessary to maintain order.</string>
    <string name="topic4">Physician-Assisted Suicide</string>
    <string name="topic4question1">Physician-assisted suicide is moral.</string>
    <string name="topic4question2">People should be able to choose to end their own suffering.</string>
    <string name="topic4question3">Minors should be eligible for physician-assisted suicide.</string>
    <string name="topic4question4">The caretaker of someone in a coma can choose physician-assisted suicide.</string>
    <string name="topic4question5">Physician-assisted suicide does not fringe on the hippocratic oath.</string>
    <string name="topic5">Illegal Immigration</string>
    <string name="topic5question1">It is easy to become a United States citizen.</string>
    <string name="topic5question2">The United States should work harder to stop illegal immigration.</string>
    <string name="topic5question3">Illegal immigration can be moral.</string>
    <string name="topic5question4">Illegal immigration takes resources from tax-paying citizens.</string>
    <string name="topic5question5">I would pay more taxes to prevent illegal immigration.</string>
    <string name="option1">Strongly Agree</string>
    <string name="option2">Somewhat Agree</string>
    <string name="option3">Neutral</string>
    <string name="option4">Somewhat Disagree</string>
    <string name="option5">Strongly Disagree</string>
    <string name="email_hint">Enter Email</string>
    <string name="email_label">Enter a valid email address</string>
    <string name="password_hint">Enter Password</string>
    <string name="password_label">Enter a valid password, minimum of 6 characters</string>
    <string name="username_hint">Enter username</string>
    <string name="username_label">Enter a valid username, maximum of 12 characters</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="email_sent">Email Sent</string>
    <string name="email_failed">Email not found</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="enter_message_hint">Enter message ...</string>
    <string name="report_header">REPORT A MESSAGE</string>
    <string name="report_message_display_header">The message being reported is:</string>
    <string name="reason_header">Select a reason for the report:</string>
    <string name="additional_info_header">Enter any additional info:</string>
    <string name="additional_info_hint">Enter info...</string>
    <string name="back">Back</string>
    <string name="report">Report</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="forgot">Forgot password</string>
    <string name="send">Send reset email</string>
    <string name="return_login">return to log in</string>
    <string name="start_convo">Start a conversation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clickable_string"><b>Sure! Take me there!</b></string>
    <string name="new_connections">New Connections:</string>
    <string name="welcome_messages">Hello, %1$s! You have %2$d new messages.</string>
    <string name="reported_message"><i>Reported message</i></string>
    <string name="block_unblock">Block/Unblock</string>
    <string name="change_username">Change Username</string>
    <string name="return_home">return</string>
    <string name="enter_new_username">Enter New Username</string>
    <string name="confirm_new_username">Confirm New Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="enter_new_email">Enter New Email</string>
    <string name="confirm_new_email">Confirm New Email</string>
    <string name="hello_settings">Hello, </string>
    <string name="settings">SETTINGS</string>
    <string name="home">HOME</string>
    <string name="messages">MESSAGES</string>
    <string name="sign_out">Sign Out</string>
    <string name="question1">Question 1 of 5</string>
    <string name="question2">Question 2 of 5</string>
    <string name="question3">Question 3 of 5</string>
    <string name="question4">Question 4 of 5</string>
    <string name="question5">Question 5 of 5</string>
    <string name="incorrect_login">Incorrect email or password</string>
    <string name="created_success">Account created successfully</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="banned_word">"Your message contains a word that violates our terms of service"</string>
    <string name="user_blocked">User Blocked</string>
    <string name="user_unblocked">User Unblocked</string>
    <string name="user_blocked_failed">Failed to block user</string>
    <string name="user_unblocked_failed">Failed to unblock user</string>
    <string name="success">Success!</string>
    <string name="failed">Failed!</string>
    <string name="emails_dont_match">The emails you entered do not match</string>
    <string name="passwords_dont_match">The passwords you entered do not match</string>
    <string name="usernames_dont_match">The usernames you entered do not match</string>
</resources>