<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".SurveyFragment">

    <TextView
        android:id="@+id/questionheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/topic_poll"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="@string/topic1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank1">

        </Button>

        <Button
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="@string/topic2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank2">

        </Button>

        <Button
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="@string/topic3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank3">

        </Button>

        <Button
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="@string/topic4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank4">

        </Button>

        <Button
            android:id="@+id/option5"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:text="@string/topic5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank4">

        </Button>
    </LinearLayout>


</LinearLayout>