<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".QuestionFragment">

    <TextView
        android:id="@+id/questionheader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_200"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="Question 1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </TextView>

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/questionText"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:text="I am a test question"
            android:padding="5dp"/>

        <Button
            android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/option1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank1">

        </Button>

        <Button
            android:id="@+id/option2"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/option2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank2">

        </Button>

        <Button
            android:id="@+id/option3"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/option3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank3">

        </Button>

        <Button
            android:id="@+id/option4"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/option4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank4">

        </Button>

        <Button
            android:id="@+id/option5"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/option5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/blank4">

        </Button>
    </LinearLayout>


</LinearLayout>