<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginRegistration">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Polmegle"
        android:fontFamily="sans-serif-black"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/black"></TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"></TextView>
    <TextView
        android:id="@+id/email_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter a valid email"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:visibility="gone"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/email_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter a valid password, minimum of 6 characters"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:visibility="gone"></TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/password_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Enter a valid username"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:visibility="gone"></TextView>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enter_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/white"
        app:boxBackgroundMode="outline"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="gone"
        android:hint="Enter Username">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="match_parent"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="3">
        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_text"
            android:layout_weight=".5"></Button>
        <TextView
            android:id="@+id/filler"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:visibility="gone"
            android:layout_weight="1"></Button>

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="next"
            android:visibility="gone"
            android:layout_weight="1"></Button>

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:layout_weight=".5"></Button>

    </LinearLayout>
    <TextView
        android:layout_width="0dp"
        android:layout_height="20dp"
        />
    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="forgot username/password?"
        ></Button>
    <Button
        android:id="@+id/forgot_password_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send email"
        android:visibility="gone"
        ></Button>
    <Button
        android:id="@+id/revert"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="return to login"
        android:visibility="gone"
        ></Button>

</LinearLayout>